Updates from Overleaf

--- a/appendices/b-assignment/assignment.tex
+++ b/appendices/b-assignment/assignment.tex
@@ -1,4 +1,5 @@
-\chapter{Project assignment}
+\chapter{Project Assignment}
+\label{app:project-assignment}
 
 \cleardoublepage
-\includepdf[pages=-]{appendices/b-assignment/OppgaveBeskrivelse}
+\includepdf[pages=-]{appendices/b-assignment/OppgaveBeskrivelse.pdf}
