--- a/appendices/c-agreements/agreements.tex
+++ b/appendices/c-agreements/agreements.tex
@@ -1,6 +1,7 @@
-\chapter{Project agreements}
+\chapter{Project Agreements}
+\label{app:project-agreements}
 
 \cleardoublepage
-\includepdf[pages=-]{appendices/c-agreements/NTNUAgreement}
+\includepdf[pages=-]{appendices/c-agreements/NTNUAgreement.pdf}
 \cleardoublepage
-\includepdf[pages=-]{appendices/c-agreements/MobaiAgreement}
+\includepdf[pages=-]{appendices/c-agreements/MobaiAgreement.pdf}
