--- a/appendices/meeting-reports/1-meetings-supervisor.tex
+++ b/appendices/meeting-reports/1-meetings-supervisor.tex
@@ -1,8 +1,9 @@
 %\dominitoc% Initialization
 %\tableofcontents
-\chapter{Meetings with project supervisor}
+\chapter{Meetings With Project Supervisor}
+\label{appendix:supervisor}
 
-We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. There were also some extraordinary meetings during the project.
+We had regular meetings with our project supervisor Ali on Mondays at 12:00. There were also some extraordinary meetings during the project.
 
 % TODO: add the latest meeting reports, after the 10th of May.
 
@@ -25,7 +26,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Should we write everything in English?
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 18.01.2021}
 \subsection*{Planned agenda}
@@ -60,7 +61,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Write the first draft for the structure of the thesis. Write down the chapter names and number of pages.
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 27.01.2021}
 \subsection*{Planned agenda}
@@ -105,7 +106,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Finalize our time plan.
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 01.02.2021}
 \subsection*{Planned agenda}
@@ -134,7 +135,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Create a pilot test for the subjective experiment. Be prepared for comments and changes. Have a finished test by the 15th of February.
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 08.02.2021}
 \subsection*{Planned agenda}
@@ -181,7 +182,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Test the datasets with the IQMs and check out the results.
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 11.02.2021}
 \subsection*{Planned agenda}
@@ -196,7 +197,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Use the  face image quality scores 1-5, or maybe 1-7?
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 15.02.2021}
 \subsection*{Planned agenda}
@@ -216,7 +217,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \end{itemize}
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 22.02.2021}
 \subsection*{Planned agenda}
@@ -232,7 +233,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item We will continue working on the web application.
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 01.03.2021}
 \subsection*{Planned agenda}
@@ -268,7 +269,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Ask mobai if they want us to create our own dataset.
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 08.03.2021}
 \subsection*{Planned agenda}
@@ -292,7 +293,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Send the mail to the participants.
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 15.03.2021}
 \subsection*{Planned agenda}
@@ -319,7 +320,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \end{itemize}
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 22.03.2021}
 \subsection*{Planned agenda}
@@ -341,7 +342,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \end{itemize}
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 29.03.2021}
 \subsection*{Planned agenda}
@@ -359,7 +360,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Send thesis chapter 1 to Ali.
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 06.04.2021}
 \subsection*{Planned agenda}
@@ -378,7 +379,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Find a name for our dataset.
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 12.04.2021}
 \subsection*{Planned agenda}
@@ -396,7 +397,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Run the matrices on our own dataset. 
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 19.04.2021}
 \subsection*{Planned agenda}
@@ -415,7 +416,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \end{itemize}
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 26.04.2021}
 \subsection*{Planned agenda}
@@ -450,7 +451,7 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \end{itemize}
 \end{itemize}
 
-\newpage
+
 
 \section*{Meeting with project supervisor 03.05.2021}
 \subsection*{Planned agenda}
@@ -479,7 +480,6 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \end{itemize}
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with project supervisor 06.05.2021}
 \subsection*{Planned agenda}
@@ -499,7 +499,6 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \end{itemize}
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with project supervisor 10.05.2021}
 \subsection*{Planned agenda}
@@ -514,4 +513,59 @@ We had regular meetings with our project supervisor (Ali) on Mondays at 12:00. T
     \item Send the chapters we discussed to Ali by Thursday.
     \item We will have a meeting Friday afternoon the 14th of May.
     \item We will have a meeting on Tuesday at 11:00 the 18th of May.
+\end{itemize}
+
+
+\section*{Meeting with project supervisor 14.05.2021}
+
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Discuss chapter 4 of the thesis.
+    \item Discuss chapter 5 of the thesis.
+    \item Discuss the conclusion of the thesis.
+    \item Discuss the abstract.
+    \item Should we keep the list of acronyms?
+    \item Should we include a glossary?
+    \item How do we properly include photo credits for the images used in the figures?
+    \item Prepare a final schedule for the project.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We will edit chapter 4 and 5, based on the feedback from Ali.
+    \item We are currently finishing the work on chapters 6 and 7. We will send the draft to Ali.
+    \item We will keep the list of acronyms.
+    \item We will not include a glossary.
+    \item We will send Ali our thesis on the 16th of May.
+    \item We have prepared a final schedule for the project.
+\end{itemize}
+
+
+\section*{Meeting with project supervisor 18.05.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Discuss the feedback on the thesis.
+    \item What to include as appendices?
+    \item What is a fitting name for the thesis?
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We will review the thesis based on the feedback from Ali.
+    \item We will further discuss what to include in the appendices.
+    \item "Face Image Quality Assessment" can be a fitting name for the thesis.
+\end{itemize}
+
+
+\section*{Meeting with project supervisor 19.05.2021}
+\subsection*{Planned agenda}
+\begin{itemize}
+    \item Discuss our review of chapter 6.
+    \item Discuss the abstract.
+\end{itemize}
+
+\subsection*{Summaries}
+\begin{itemize}
+    \item We will do some more changes to chapter 6.
+    \item We will have a few meetings with Ali again before the project presentation.
 \end{itemize}
