--- a/appendices/meeting-reports/2-meetings-mobai.tex
+++ b/appendices/meeting-reports/2-meetings-mobai.tex
@@ -1,4 +1,5 @@
-\chapter{Meetings with Mobai}
+\chapter{Meetings With Mobai}
+\label{appendix:Mobai}
 
 We had weekly meetings with Mobai every Tuesday at 12:00. This later changed to bi-weekly meetings every other Tuesday at the same time.
 
@@ -52,8 +53,6 @@ Unless stated otherwise, the planned agenda is written by the bachelor group.
 \end{itemize}
 
 
-\newpage
-
 \section*{Meeting with Mobai 26.01.2021}
 (The planned meeting on 19.01.2021 was canceled due to unforeseen circumstances.) 
 
@@ -103,7 +102,6 @@ Unless stated otherwise, the planned agenda is written by the bachelor group.
     \item Read and understand more about face quality metrics.
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with Mobai 09.02.2021}
 \subsection*{Planned agenda}
@@ -138,7 +136,6 @@ Unless stated otherwise, the planned agenda is written by the bachelor group.
     \item Create the first draft of the instructions for the subjective experiment.
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with Mobai 16.02.2021}
 \subsection*{Planned agenda}
@@ -169,7 +166,6 @@ Unless stated otherwise, the planned agenda is written by the bachelor group.
     \item Send Guoqiang images in the survey instructions so he can rate them from 1-5.
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with Mobai 19.02.2021}
 \subsection*{Planned agenda}
@@ -200,7 +196,6 @@ Unless stated otherwise, the planned agenda is written by the bachelor group.
     \item Do research on REST API.
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with Mobai 23.02.2021}
 \subsection*{Planned agenda}
@@ -224,7 +219,6 @@ Unless stated otherwise, the planned agenda is written by the bachelor group.
     \item Get in touch on Teams or email if we need some input before the meeting.
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with Mobai 02.03.2021}
 \subsection*{Planned agenda}
@@ -247,7 +241,6 @@ Unless stated otherwise, the planned agenda is written by the bachelor group.
     \item Being able to add more algorithms to the web application is more important than processing multiple images.
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with Mobai 16.03.2021}
 \subsection*{Planned agenda}
@@ -266,7 +259,6 @@ Unless stated otherwise, the planned agenda is written by the bachelor group.
     \item Add Martin to the Github repository of the project.
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with Mobai 30.03.2021}
 \subsection*{Planned agenda}
@@ -299,7 +291,6 @@ Unless stated otherwise, the planned agenda is written by the bachelor group.
     \item Add Guoqiang to the Github repository of the project.
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with Mobai 13.04.2021}
 \subsection*{Planned agenda}
@@ -354,7 +345,6 @@ Unless stated otherwise, the planned agenda is written by the bachelor group.
     \item Test all the images and send the images that fail to Guoqiang.
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with Mobai 27.04.2021}
 \subsection*{Planned agenda}
@@ -373,7 +363,6 @@ Unless stated otherwise, the planned agenda is written by the bachelor group.
     \item Mobai will update us on Docker soon.
 \end{itemize}
 
-\newpage
 
 \section*{Meeting with Mobai 11.05.2021}
 \subsection*{Planned agenda}
