--- a/glossary.tex
+++ b/glossary.tex
@@ -51,9 +51,9 @@ typically printed as an appendix}
 % --------------------
 % ----- Acronyms -----
 % --------------------
-\setglossarypreamble[acronym]{The page number after an acronym refers to the first time it is used in the thesis.}
+\setglossarypreamble[acronym]{The page number after an acronym refers to the first time it is used.}
 \newacronym{api}{API}{Application Programming Interface}
-\newacronym{ai}{AI}{artificial intelligence}
+\newacronym{ai}{AI}{Artificial Intelligence}
 \newacronym{cie}{CIE}{International Commission on Illumination}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{covid19}{COVID-19}{Coronavirus disease 2019}
@@ -74,9 +74,11 @@ typically printed as an appendix}
 \newacronym{iso}{ISO}{International Organization for Standardization}
 \newacronym{json}{JSON}{JavaScript Object Notation}
 \newacronym{mrtd}{MRTD}{Machine Readable Travel Documents}
+\newacronym{mos}{MOS}{Mean Opinion Score}
 \newacronym{mvc}{MVC}{Model-View-Controller}
 \newacronym{mtcnn}{MTCNN}{Multitask Cascaded Convolutional Networks}
 \newacronym{ntnu}{NTNU}{Norwegian University of Science and Technology}
+\newacronym{rmse}{RMSE}{Root Mean Square Error}
 %\newacronym{ux}{UX}{User Experience}
 %\newacronym{ui}{UI}{User Interface}
 
