--- a/notes.tex
+++ b/notes.tex
@@ -82,11 +82,11 @@
     - how are the objective similar to the subjective? same quality scores? (2)
   
  Appendix
-    - Project plan
-    - Survey instructions
-    - Project agreements with NTNU and Mobai
-    - Summary meeting reports with supervisor
-    - Summary meeting reports with Mobai
+x    - Project plan
+x    - Survey instructions
+x    - Project agreements with NTNU (and Mobai?)
+x    - Summary meeting reports with supervisor
+x    - Summary meeting reports with Mobai
     - Toggl report
     - Results raw data. As CSV or Excel?
     
@@ -94,7 +94,7 @@
  ----
 Sjekk før innlevering:
 - Alle Comments er "resolved"
-- Alle captions i figurer og tabeller skal ikke ha punktum i siste setning.
+- Alle captions i figurer og tabeller har/ikke punktum til slutt
 - Alle paragrafinnrykk er riktig.
 - "facial images", "face image quality"
 - "Code listing", "Table", "Figure" er skrevet likt.
