--- a/thesis.tex
+++ b/thesis.tex
@@ -1,9 +1,9 @@
 \documentclass[british,titlepage,table,xcdraw]{ntnuthesis}
 
-\title{Face Image Quality}
-\shorttitle{Face Image Quality}
+\title{Face Image Quality Assessment}
+\shorttitle{Face Image Quality Assessment}
 \author{Walid Demloj, Hans Petter Fauchald Taralrud, Kjetil Grosberghaugen, Julian Nyland Skattum}
-\shortauthor{W. Demloj, H. P. F. Taralrud, K. Grosberghaugen, J. N. Skattum }
+%\shortauthor{W. Demloj, H. P. F. Taralrud, K. Grosberghaugen, J. N. Skattum }
 \date{CC-BY \ntnuthesisdate}
 
 \addbibresource{thesis.bib}
@@ -40,12 +40,14 @@
 
 
 \appendix
-%\input{appendices/a-projectPlan/projectPlan}
-%\input{appendices/b-assignment/assignment}
-%\input{appendices/c-agreements/agreements}
-%\input{appendices/d-results/results}
-%\input{appendices/meeting-reports/0-meetings}
-%\input{appendices/meeting-reports/1-meetings-supervisor}
-%\input{appendices/meeting-reports/2-meetings-mobai}
+
+\input{appendices/b-assignment/assignment}
+\input{appendices/c-agreements/agreements}
+\input{appendices/a-projectPlan/projectPlan}
+\input{appendices/survey-instructions/survey-instructions}
+\input{appendices/d-results/results}
+\input{appendices/meeting-reports/1-meetings-supervisor}
+\input{appendices/meeting-reports/2-meetings-mobai}
+%\input{appendices/toggl/toggl}
 
 \end{document}
