Updates from Overleaf

--- a/appendices/toggl/toggl.tex
+++ b/appendices/toggl/toggl.tex
@@ -1,4 +1,4 @@
 \chapter{Toggl Reports}
 \label{app:toggl-reports}
 
-\includepdf[pages=-, angle=270]{appendices/toggl/toggl-reports.pdf}
+\includepdf[pages=-]{appendices/toggl/toggl-reports.pdf}
