--- a/glossary.tex
+++ b/glossary.tex
@@ -55,6 +55,7 @@ typically printed as an appendix}
 \newacronym{api}{API}{Application Programming Interface}
 \newacronym{ai}{AI}{Artificial Intelligence}
 \newacronym{cie}{CIE}{International Commission on Illumination}
+\newacronym{cli}{CLI}{Command Line Interface}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{covid19}{COVID-19}{Coronavirus disease 2019}
 %\newacronym{csv}{CSV}{Comma-separated values}
@@ -77,9 +78,10 @@ typically printed as an appendix}
 \newacronym{mos}{MOS}{Mean Opinion Score}
 \newacronym{mvc}{MVC}{Model-View-Controller}
 \newacronym{mtcnn}{MTCNN}{Multitask Cascaded Convolutional Networks}
-\newacronym{ntnu}{NTNU}{Norwegian University of Science and Technology}
+%\newacronym{ntnu}{NTNU}{Norwegian University of Science and Technology}
+\newacronym{rest}{REST}{REpresentational State Transfer}
 \newacronym{rmse}{RMSE}{Root Mean Square Error}
 %\newacronym{ux}{UX}{User Experience}
-%\newacronym{ui}{UI}{User Interface}
+\newacronym{ui}{UI}{User Interface}
 
 
