--- a/thesis.tex
+++ b/thesis.tex
@@ -48,6 +48,6 @@
 \input{appendices/d-results/results}
 \input{appendices/meeting-reports/1-meetings-supervisor}
 \input{appendices/meeting-reports/2-meetings-mobai}
-%\input{appendices/toggl/toggl}
+\input{appendices/toggl/toggl}
 
 \end{document}
